# advent_of_code_2025

./: .gitignore  CMakeLists.txt  README.md  command_to_repeat.txt  conanfile.py  pull_data.zsh  rinse_and_repeat.py  run.zsh
docs/: README.md
docs/scripts/: scripts.md
docs/slides/: slides.md
src/: aoc25.cpp  aoc25.h  main.cpp
src/day10/: solve.cpp  solve.hpp  solver.cpp  solver.hpp
src/puzzle/: day0.cpp  day00.cpp  day01.cpp  day02.cpp  day03.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
test_package/: conanfile.py
